--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/OffCanvasShoppingCart.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/OffCanvasShoppingCart.cshtml
@@ -209,7 +209,7 @@
     {
         <div sm-suppress-if-empty-zone="offcanvas_cart_summary" class="offcanvas-cart-external-checkout">
             <div class="heading heading-center py-0">
-                <h6 class="heading-title fs-h5 fwn">@T("Common.Or")</h6>
+                <span class="heading-title fs-h5 fwn">@T("Common.Or")</span>
             </div>
             @*INFO: written like this so pseudo selector :not(:empty) can work and suppress padding, in case we need to return Empty() from ViewComponent directly*@
             <div class="d-flex justify-content-center align-items-center flex-wrap flex-column"><zone name="offcanvas_cart_summary" /></div>
